# SenecaHacks

./: .env.template  .gitignore  DOCKER.md  Dockerfile  OPTIMIZATION_REPORT.md  README.md  benchmark.sh  benchmark_results.csv  check_records.sh  docker-compose.yml  requirements.txt  requirments.txt
.github/: copilot-instructions.md
api/: Dockerfile  README.md  app.py  requirements.txt
app/: embeddings.py  main.py  utils.py
app/cpp_ingestion/: CMakeLists.txt  Dockerfile  README.md  health_processor.cpp  health_processor.hpp  main.cpp  main_test.cpp  run_ingestion.sh
